udpate dockerfile
